--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ __pycache__/
 venv/
 ENV/
 
+# Database
+db.sqlite3
+
 # Django
 *.log
 local_settings.py
@@ -15,8 +18,9 @@ media/
 
 # Environment
 .env
-.env.local
-
+venv/
+*.pyc
+__pycache__/
 # IDE
 .vscode/
 .idea/
@@ -29,3 +33,6 @@ staticfiles/
 # OS
 .DS_Store
 Thumbs.db
+
+# Media files
+media/
